--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   "author": "neo",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.4"
+    "config": "^3.0.0",
+    "express": "^4.16.4",
+    "passport": "^0.4.0",
+    "passport-google-oauth20": "^1.0.0"
   }
 }
