--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "config": "^3.0.0",
     "express": "^4.16.4",
+    "mongoose": "^5.3.13",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
   }
