--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "dependencies": {
     "config": "^3.0.0",
+    "cookie-session": "^2.0.0-beta.3",
     "express": "^4.16.4",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
